# ffmpegdemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gloomyer/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MPlayer.cpp  MPlayer.h  PlayerInfo.h  common.h  player.cpp
app/src/main/cpp/audio_player/: AudioPlayer.cpp  AudioPlayer.h
app/src/main/java/com/gloomyer/player/: MainActivity.java
app/src/main/java/com/gloomyer/player/player/: VideoPalyer.java  VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gloomyer/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
